welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: not found: value estSurBlanc
while (estSurBlanc())
       ^